--- a/index.html
+++ b/index.html
@@ -109,9 +109,15 @@
 
         /* Profile Section */
         .profile-section {
-            text-align: center;
-            padding: 60px 20px;
-            background: #fff;
+            width:50px;
+            height:50px;
+            border-radius: 50%;
+            align-items: left;
+            object-fit:cover;
+            boarder: 4px solid var(--gold);
+            margin-bottom: 20px;
+            transition: transform 0.3s;
+
         }
 
         .profile-img {
