--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
         }
 
         .logo-img {
-            width: 120px;
-            height: auto;
-            border-radius: 50%;
-            margin-bottom: 15px;
+                
+            width: 50px;
+                        height: 50px;
+                                    border-radius: 50%;
+                                                object-fit: cover;
+                                                            border: 4px solid var(--gold);
+                                                                        margin-bottom: 20px;
+                                                                                    transition: transform 0.3s;
         }
 
         /* Profile Section */
         .profile-section {
-            width:50px;
-            height:50px;
-            border-radius: 50%;
-            align-items: left;
-            object-fit:cover;
-            boarder: 4px solid var(--gold);
-            margin-bottom: 20px;
-            transition: transform 0.3s;
+             
+            text-align: center ;
+            padding: 60px 20 px;
+            background: #fff;
 
         }
 
@@ -308,7 +308,7 @@
             border: 3px double #d4af37; text-align: center; margin: 50px auto;
         }
         .certificate-container::after { content: ''; position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; border: 0.4px solid #d4af37; pointer-events: none; }
-        .logo { width: 80px; margin-bottom: 20px; }
+        .logo {  width: 50px; height: 50px; border-radius: 50%; margin-bottom: 20px; }
         h1.cert-h1 { color: #d4af37; font-size: 2.2rem; text-transform: uppercase; margin-bottom: 10px; }
         .recipient-name { font-family: 'Georgia', serif; font-size: 1.8rem; border-bottom: 2px solid #d4af37; display: inline-block; margin: 25px 0; padding: 0 40px; }
         .signature-section { margin-top: 40px; display: flex; justify-content: flex-end; padding-right: 30px; }
