--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
 
         /* Header Section */
         header {
-            text-align: center;
+            text-align: left;
             padding: 60px 20px;
             background: #fdfdfd;
         }
 
         .logo-img {
                 
-            width: 50px;
-                        height: 50px;
+            width: 60px;
+                        height: 60px;
                                     border-radius: 50%;
                                                 object-fit: cover;
                                                             border: 4px solid var(--gold);
