--- a/index.html
+++ b/index.html
@@ -308,8 +308,11 @@
             border: 3px double #d4af37; text-align: center; margin: 50px auto;
         }
         .certificate-container::after { content: ''; position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; border: 0.4px solid #d4af37; pointer-events: none; }
-        .logo {  width: 50px; height: 50px; border-radius: 50%; margin-bottom: 20px; }
-        .cert-h1 { color: #d4af37; font-size: 1rem; text-transform: uppercase; margin-bottom: 5px; }
+        .logo {  width: 50px; height: 50px; border-radius: 50%; object-fit: cover;
+                    border: 4px solid var(--gold);
+                                margin-bottom: 20px;
+                                            transition: transform 0.3s; }
+        h1.cert-h1 { color: #d4af37; font-size: 1.8rem; text-transform: uppercase; margin-bottom: 5px; }
         .recipient-name { font-family: 'Georgia', serif; font-size: 1.4rem; border-bottom: 2px solid #d4af37; display: inline-block; margin: 25px 0; padding: 0 40px; }
         .signature-section { margin-top: 40px; display: flex; justify-content: flex-end; padding-right: 30px; }
         .signature-box { border-top: 1px solid #d4af37; padding-top: 10px; text-align: center; }
@@ -488,7 +491,7 @@
         </div>
     </div>
     <div style="text-align:center; padding-bottom: 40px;">
-        <button class="btn-main" onclick="closeModal('certModal')">CLOSE & DOWNLOAD</button>
+        <button class="btn-main" onclick="closeModal('certModal')">take screenshot & close</button>
     </div>
 </div>
 
