--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="google-site-verification" content="AZtFttlWzmzBwGxs5hiQrOs6XCaoU1vE8Kbec6fg-oU" />
     <title>G-FYD Association | Founder Gana Ram Sai</title>
     <meta name="description" content="G-FYD Association - Against Sexual Abuses. Dedicated to Social Service and Development. Founded by Gana Ram Sai.">
     <meta name="keywords" content="G-FYD, g-fyd, GFYD, gfyd, gana ram sai, G-FYD ASSOCIATION, g-fyd association, gfyd association, gana ram sai website, g-fyd website, association website, association, gfid association, gfid">
