--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     
     <title>G-FYD Association | Founder Gana Ram Sai</title>
     <meta name="description" content="G-FYD Association - Against Sexual Abuses. Dedicated to Social Service and Development. Founded by Gana Ram Sai.">
-    <meta name="keywords" content="G-FYD, g-fyd, GFYD, gfyd, gana ram sai, gana's website, G-FYD ASSOCIATION, g-fyd association, gfyd association, gana ram sai website, g-fyd website, association website, association, gfid association, gfid">
+    <meta name="keywords" content="G-FYD, g-fyd, GFYD, gfyd, gana ram sai, gana's website, <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" href="android-chrome-512x512.png">
+G-FYD ASSOCIATION, g-fyd association, gfyd association, gana ram sai website, g-fyd website, association website, association, gfid association, gfid">
     <meta name="author" content="Gana Ram Sai">
     
     <meta property="og:title" content="G-FYD Association | Gana Ram Sai">
     <meta property="og:description" content="Working against sexual abuses and for social development.">
     <meta property="og:type" content="website">
+
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="android-chrome-512x512.png">
 
     <style>
         /* High Performance CSS Variables */
